# plls_fs_7sem

./: CMakeLists.txt  Makefile
include/: fat32_structures.h  fat_reader.h  fs_driver.h  log.h
src/: fat_reader.c  fs_driver.c  log.c
